--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horizontal Roulette</title>
+    <title>GameOdds - Roulette</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -12,7 +12,6 @@
             font-family: 'Inter', sans-serif;
             background-color: #0e0e0e;
             color: #fff;
-            overflow: hidden;
         }
 
         .navbar {
@@ -37,52 +36,63 @@
 
         .roulette-section {
             text-align: center;
-            padding: 30px 20px;
+            padding: 50px 20px;
+            background-color: #1a1a1a;
         }
 
-        .roulette-wheel-container {
-            position: relative;
-            width: 100%;
-            height: 12.5vh; /* 1/8th of screen vertically */
-            margin: 20px auto;
-            overflow: hidden;
-            border: 2px solid #ff5722;
+        .roulette-section h2 {
+            font-size: 36px;
+            margin-bottom: 20px;
         }
 
         .roulette-wheel {
             display: flex;
-            position: absolute;
-            height: 100%;
-            will-change: transform;
-            transition: transform 4s cubic-bezier(0.33, 1, 0.68, 1); /* Smooth spin */
+            justify-content: center;
+            gap: 10px;
+            margin-bottom: 20px;
+            overflow: hidden;
+            position: relative;
+            width: 100%;
+            height: 60px;
         }
 
-        .spot {
-            flex: 0 0 100px; /* Fixed width for each spot */
-            height: 100%;
+        .roulette-wheel .spots {
+            display: flex;
+            position: absolute;
+            left: 0;
+            transition: left 5s ease-out;
+        }
+
+        .roulette-wheel .spot {
+            width: 50px;
+            height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 16px;
+            border-radius: 50%;
             font-weight: 600;
-            color: #fff;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            flex-shrink: 0;
         }
 
-        .spot.red {
+        .roulette-wheel .spot.red {
             background-color: #ff4444;
         }
 
-        .spot.black {
+        .roulette-wheel .spot.black {
             background-color: #333;
         }
 
-        .spot.green {
+        .roulette-wheel .spot.green {
             background-color: #4caf50;
         }
 
-        .countdown {
-            font-size: 20px;
-            font-weight: 600;
+        .roulette-wheel .spot.selected {
+            border: 3px solid #ff5722;
+        }
+
+        .bet-options {
             margin-bottom: 20px;
         }
 
@@ -104,7 +114,36 @@
         .result {
             font-size: 20px;
             font-weight: 600;
+            margin-bottom: 20px;
+        }
+
+        .bets-list {
             margin-top: 20px;
+            text-align: left;
+            max-width: 300px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .bets-list h3 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        .bets-list ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .bets-list ul li {
+            font-size: 16px;
+            margin-bottom: 5px;
+        }
+
+        .countdown {
+            font-size: 24px;
+            font-weight: 600;
+            margin-bottom: 20px;
         }
 
         .footer {
@@ -113,143 +152,168 @@
             background-color: #1a1a1a;
             color: #ccc;
         }
+
+        .footer a {
+            color: #ff5722;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
+    <!-- Navbar -->
     <div class="navbar">
         <div class="logo">GameOdds</div>
         <div class="balance">Balance: <span id="balance">100</span> coins</div>
     </div>
 
+    <!-- Roulette Section -->
     <div class="roulette-section">
+        <h2>Roulette</h2>
         <div class="countdown" id="countdown">Next spin in: 15 seconds</div>
-        <div class="roulette-wheel-container">
-            <div class="roulette-wheel" id="roulette-wheel">
-                <!-- Numbers are repeated to create a looping effect -->
-                <div class="spot red">1</div>
-                <div class="spot black">2</div>
-                <div class="spot red">3</div>
-                <div class="spot black">4</div>
-                <div class="spot red">5</div>
-                <div class="spot black">6</div>
-                <div class="spot red">7</div>
-                <div class="spot black">8</div>
-                <div class="spot red">9</div>
-                <div class="spot black">10</div>
-                <div class="spot red">11</div>
-                <div class="spot black">12</div>
-                <div class="spot red">13</div>
-                <div class="spot green">14</div>
-                <!-- Repeat sequence for looping -->
-                <div class="spot red">1</div>
-                <div class="spot black">2</div>
-                <div class="spot red">3</div>
-                <div class="spot black">4</div>
-                <div class="spot red">5</div>
-                <div class="spot black">6</div>
-                <div class="spot red">7</div>
-                <div class="spot black">8</div>
-                <div class="spot red">9</div>
-                <div class="spot black">10</div>
-                <div class="spot red">11</div>
-                <div class="spot black">12</div>
-                <div class="spot red">13</div>
-                <div class="spot green">14</div>
+        <div class="roulette-wheel" id="roulette-wheel">
+            <div class="spots" id="spots">
+                <!-- Spots 1-15 -->
+                <div class="spot red" data-value="1">1</div>
+                <div class="spot black" data-value="2">2</div>
+                <div class="spot red" data-value="3">3</div>
+                <div class="spot black" data-value="4">4</div>
+                <div class="spot red" data-value="5">5</div>
+                <div class="spot black" data-value="6">6</div>
+                <div class="spot red" data-value="7">7</div>
+                <div class="spot black" data-value="8">8</div>
+                <div class="spot red" data-value="9">9</div>
+                <div class="spot black" data-value="10">10</div>
+                <div class="spot red" data-value="11">11</div>
+                <div class="spot black" data-value="12">12</div>
+                <div class="spot red" data-value="13">13</div>
+                <div class="spot black" data-value="14">14</div>
+                <div class="spot green" data-value="15">15</div>
             </div>
         </div>
         <div class="bet-options">
-            <button onclick="placeBet('red')">Bet on Red</button>
-            <button onclick="placeBet('black')">Bet on Black</button>
-            <button onclick="placeBet('green')">Bet on Green</button>
+            <button onclick="placeBet('red')">Bet on Red (2x)</button>
+            <button onclick="placeBet('black')">Bet on Black (2x)</button>
+            <button onclick="placeBet('green')">Bet on Green (14x)</button>
         </div>
         <div class="result" id="result"></div>
+        <div class="bets-list">
+            <h3>Player Bets</h3>
+            <ul id="bets-list"></ul>
+        </div>
     </div>
 
+    <!-- Footer -->
     <div class="footer">
-        <p>&copy; 2025 GameOdds. All rights reserved.</p>
+        <p>&copy; 2023 GameOdds. All rights reserved. | <a href="#terms">Terms of Service</a> | <a href="#privacy">Privacy Policy</a></p>
     </div>
 
     <script>
         let balance = 100;
         let currentBet = null;
-        let currentBetColor = null;
+        let playerName = '';
+        let bets = [];
         let countdown = 15;
+        let countdownInterval;
 
-        const countdownElement = document.getElementById('countdown');
-        const resultElement = document.getElementById('result');
-        const wheel = document.getElementById('roulette-wheel');
-        const balanceElement = document.getElementById('balance');
+        // Prompt for player name
+        playerName = prompt("Enter your player name:");
+        if (!playerName) {
+            playerName = 'Player';
+        }
 
+        // Update balance display
         function updateBalance() {
-            balanceElement.textContent = balance;
+            document.getElementById('balance').textContent = balance;
         }
 
+        // Place a bet
         function placeBet(color) {
-            if (currentBet) {
-                alert("You already placed a bet for this round!");
-                return;
-            }
             if (balance < 10) {
-                alert("Not enough coins to bet!");
+                alert("You don't have enough coins to bet!");
                 return;
             }
-            currentBet = 10; // Fixed bet
-            currentBetColor = color;
-            balance -= currentBet;
+
+            currentBet = color;
+            balance -= 10; // Deduct 10 coins for the bet
             updateBalance();
-            resultElement.textContent = `You placed 10 coins on ${color}.`;
+
+            // Add bet to the list
+            bets.push({ name: playerName, bet: color, amount: 10 });
+            updateBetsList();
         }
 
+        // Update bets list
+        function updateBetsList() {
+            const betsList = document.getElementById('bets-list');
+            betsList.innerHTML = '';
+            bets.forEach(bet => {
+                const li = document.createElement('li');
+                li.textContent = `${bet.name}: ${bet.amount} coins on ${bet.bet}`;
+                betsList.appendChild(li);
+            });
+        }
+
+        // Spin the roulette
         function spinRoulette() {
-            const rounds = 5; // Number of full spins
-            const winningIndex = Math.floor(Math.random() * 14); // 0-13 index
-            const outcome = winningIndex + 1;
-            const targetPosition = -(winningIndex * 100); // Match spot width
+            const spots = document.getElementById('spots');
+            const resultElement = document.getElementById('result');
 
-            // Spin Animation
-            const totalDistance = -(rounds * 14 * 100) + targetPosition;
-            wheel.style.transition = `transform 4s cubic-bezier(0.33, 1, 0.68, 1)`;
-            wheel.style.transform = `translateX(${totalDistance}px)`;
+            // Randomly select a winning spot (1-15)
+            const winningSpot = Math.floor(Math.random() * 15) + 1;
+            const winningColor = document.querySelector(`.spot[data-value="${winningSpot}"]`).classList.contains('red') ? 'red' :
+                                document.querySelector(`.spot[data-value="${winningSpot}"]`).classList.contains('black') ? 'black' : 'green';
 
-            // Reset wheel position after spin
+            // Calculate the distance to move the spots
+            const spotWidth = 60; // Width of each spot including gap
+            const moveDistance = winningSpot * spotWidth;
+
+            // Animate the wheel
+            spots.style.transition = 'left 5s ease-out';
+            spots.style.left = `-${moveDistance}px`;
+
+            // After animation, determine the result
             setTimeout(() => {
-                wheel.style.transition = 'none';
-                wheel.style.transform = `translateX(${targetPosition}px)`;
-            }, 4000);
+                // Check if the player won
+                bets.forEach(bet => {
+                    if (bet.bet === winningColor) {
+                        const multiplier = winningColor === 'green' ? 14 : 2;
+                        balance += bet.amount * multiplier; // Add winnings to balance
+                        resultElement.textContent = `${bet.name} won ${bet.amount * multiplier} coins!`;
+                    } else {
+                        resultElement.textContent = `${bet.name} lost ${bet.amount} coins.`;
+                    }
+                });
 
-            // Delayed Result
-            setTimeout(() => {
-                const winningColor =
-                    outcome === 14 ? "green" : outcome % 2 === 0 ? "black" : "red";
-
-                if (currentBetColor === winningColor) {
-                    const multiplier = winningColor === "green" ? 14 : 2;
-                    const winnings = currentBet * multiplier;
-                    balance += winnings;
-                    resultElement.textContent = `You won ${winnings} coins!`;
-                } else {
-                    resultElement.textContent = `You lost your bet.`;
-                }
-
-                currentBet = null;
-                currentBetColor = null;
                 updateBalance();
-            }, 4000);
+                bets = []; // Clear bets after spinning
+                updateBetsList();
+
+                // Reset the wheel
+                spots.style.transition = 'none';
+                spots.style.left = '0';
+            }, 5000); // Match the duration of the animation
         }
 
+        // Start the countdown
         function startCountdown() {
-            const interval = setInterval(() => {
+            countdownInterval = setInterval(() => {
                 countdown--;
-                countdownElement.textContent = `Next spin in: ${countdown} seconds`;
-                if (countdown === 0) {
-                    clearInterval(interval);
+                document.getElementById('countdown').textContent = `Next spin in: ${countdown} seconds`;
+
+                if (countdown <= 0) {
+                    clearInterval(countdownInterval);
                     spinRoulette();
-                    countdown = 15; // Reset countdown
-                    setTimeout(startCountdown, 4000); // Restart after spin
+                    countdown = 15;
+                    startCountdown();
                 }
             }, 1000);
         }
 
+        // Initialize the game
         startCountdown();
     </script>
 </body>
