--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horizontal Roulette</title>
+    <title>Your Main Site Title</title>
     <style>
         body {
             margin: 0;
@@ -14,6 +14,21 @@
             overflow: hidden;
         }
 
+        /* Main container for your website content */
+        .main-content {
+            width: 100%;
+            padding: 20px;
+        }
+
+        /* Your existing site styles (example placeholder for general content) */
+        .site-header {
+            text-align: center;
+            padding: 20px;
+            font-size: 24px;
+            background-color: #333;
+        }
+
+        /* The roulette container */
         .roulette-container {
             position: relative;
             width: 100%;
@@ -84,24 +99,43 @@
     </style>
 </head>
 <body>
-    <div class="roulette-container">
-        <div id="countdown">5</div>
-        <div class="highlight-bar"></div>
-        <div class="roulette-wheel" id="roulette-wheel">
-            <!-- Adding numbers/icons to loop seamlessly -->
-            <div class="spot red"><img src="path-to-icon1.png" alt="Icon 1"></div>
-            <div class="spot black"><img src="path-to-icon2.png" alt="Icon 2"></div>
-            <div class="spot red"><img src="path-to-icon3.png" alt="Icon 3"></div>
-            <div class="spot black"><img src="path-to-icon4.png" alt="Icon 4"></div>
-            <div class="spot green"><img src="path-to-icon5.png" alt="Green"></div>
-            <!-- Duplicate for seamless effect -->
-            <div class="spot red"><img src="path-to-icon1.png" alt="Icon 1"></div>
-            <div class="spot black"><img src="path-to-icon2.png" alt="Icon 2"></div>
-            <div class="spot red"><img src="path-to-icon3.png" alt="Icon 3"></div>
-            <div class="spot black"><img src="path-to-icon4.png" alt="Icon 4"></div>
-            <div class="spot green"><img src="path-to-icon5.png" alt="Green"></div>
+
+    <!-- Main Site Header -->
+    <div class="site-header">
+        <h1>Welcome to My Website</h1>
+        <p>Here is some text and content you can have for your main site.</p>
+    </div>
+
+    <!-- Main Content Section -->
+    <div class="main-content">
+        <h2>Roulette Spin Game</h2>
+        <p>Try your luck with the roulette wheel!</p>
+
+        <!-- Roulette Game -->
+        <div class="roulette-container">
+            <div id="countdown">5</div>
+            <div class="highlight-bar"></div>
+            <div class="roulette-wheel" id="roulette-wheel">
+                <!-- Adding numbers/icons to loop seamlessly -->
+                <div class="spot red"><img src="path-to-icon1.png" alt="Icon 1"></div>
+                <div class="spot black"><img src="path-to-icon2.png" alt="Icon 2"></div>
+                <div class="spot red"><img src="path-to-icon3.png" alt="Icon 3"></div>
+                <div class="spot black"><img src="path-to-icon4.png" alt="Icon 4"></div>
+                <div class="spot green"><img src="path-to-icon5.png" alt="Green"></div>
+                <!-- Duplicate for seamless effect -->
+                <div class="spot red"><img src="path-to-icon1.png" alt="Icon 1"></div>
+                <div class="spot black"><img src="path-to-icon2.png" alt="Icon 2"></div>
+                <div class="spot red"><img src="path-to-icon3.png" alt="Icon 3"></div>
+                <div class="spot black"><img src="path-to-icon4.png" alt="Icon 4"></div>
+                <div class="spot green"><img src="path-to-icon5.png" alt="Green"></div>
+            </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer style="background-color: #333; padding: 20px; text-align: center;">
+        <p>Footer Content Here</p>
+    </footer>
 
     <script>
         const wheel = document.getElementById("roulette-wheel");
